--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "react-scripts build",
     "test": "cross-env PORT=4100 react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "heroku-postBuild": "react-scripts build",
+    "heroku-postbuild": "react-scripts build",
     "start": "node index.js"
   }
 }
